Use IDs in user endpoints instead of passport numbers
