# api/timetrack/v1/openapi.yaml
@@ -117,15 +117,15 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /users/{passportNumber}:
+  /users/{id}:
     get:
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       parameters:
         - in: path
-          name: passportNumber
+          name: id
           schema:
-            type: string
+            type: integer
           required: true
       responses:
         "200":
@@ -155,12 +155,12 @@ paths:
 
     patch:
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       parameters:
         - in: path
-          name: passportNumber
+          name: id
           schema:
-            type: string
+            type: integer
           required: true
       requestBody:
         content:
@@ -194,39 +194,39 @@ paths:
                 $ref: "#/components/schemas/Error"
 
     delete:
-        security:
-          - bearerAuth: []
-        parameters:
-          - in: path
-            name: passportNumber
-            schema:
-              type: string
-            required: true
-        responses:
-          "200":
-            description: OK.
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/User"
-          "401":
-            description: Unauthorized.
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
-          "404":
-            description: Not found.
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
-          "422":
-            description: Unprocessable entity.
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        "200":
+          description: OK.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "401":
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: Not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "422":
+          description: Unprocessable entity.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
 
 
   /users/current:
@@ -580,6 +580,8 @@ components:
     UserUpdate:
         type: object
         properties:
+          passportNumber:
+            type: string
           surname:
             type: string
           name:
